--- a/admin.html
+++ b/admin.html
@@ -388,7 +388,7 @@
         <div class="container header-content">
             <div class="logo">CATALYST MANAGEMENT</div>
             <div class="header-buttons">
-                <a href="move_lec.html" class="header-btn" style="background-color: #F39C12;">
+                <a href="Move_lec.html" class="header-btn" style="background-color: #F39C12;">
                     <i class="fas fa-exchange-alt"></i> نقل المحاضرات
                 </a>
                 <a href="manage_monthes.html" class="header-btn" style="background-color: #3498DB;">
@@ -1022,4 +1022,5 @@
         });
     </script>
 </body>
+
 </html>
